src/objects/LinkedIn_Profile__c.object
<CustomObject>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Headline__c</fullName>
        <label>Headline</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_URL__c</fullName>
        <label>Profile URL</label>
        <type>Url</type>
    </fields>
    <label>LinkedIn Profile</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LP-{0000}</displayFormat>
        <label>LinkedIn Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LinkedIn Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>